--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,52 @@
 }
 
 body {
+    background-color: rgba(0, 0, 0, 0.2);
+    font-family: sans-serif;
+}
+
+h2 {
+    text-align: center;
+    font-size: 18px;
+    font-weight: normal;
+    padding: 10px;
+    margin: 5px;
+    color: rgba(0, 0, 0, 0.8);
+}
+
+span {
+    font-weight: bolder;
+}
+
+main {
     display: flex;
+    flex-wrap: wrap;
+    margin: 5px;
     justify-content: center;
-    align-items: center;
+
 }
 
 .container {
-    width: 50%;
-    padding: 30px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 38%;
+    margin: 15px;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.9);
+    overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.container h4 {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 14px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.container p {
+    color: rgba(0, 0, 0, 0.6);
+    text-align: justify;
 }
