--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ select
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  font-size: 14px;
 }
 
 input[type=submit] {
@@ -82,14 +83,9 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-size: 14px;
 }
 
 input[type=submit]:hover {
   background-color: #45a049;
-}
-
-div {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
 }
